--- a/src/about.html
+++ b/src/about.html
@@ -22,140 +22,153 @@
     <!-- endbuild -->
   </head>
   <body>
-    <div id="container-about" class="container-fluid">
-      <div class="box">
-        <img src="images/logo.png" class="logo-upper-left"/>
-          <div class="ham-menu"></div>
-          <div class="nav-modal">
-            <div class="inner">
-              <img src="images/logo.png" class="modal-logo"/>
-              <div class="menu-close"></div>
-              <ul class="nav">
-                <li><a href="/">HOME</a></li>
-                <li><a class="active" href="/about.html">ABOUT</a></li>
-                <li><a href="/listings.html">LISTINGS</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">CONTACT</a></li>
-              </ul>
-            </div>
+    <img src="images/logo.png" class="logo-upper-left"/>
+    <div class="ham-menu"></div>
+    <div class="nav-modal">
+      <div class="inner">
+        <img src="images/logo.png" class="modal-logo"/>
+        <div class="menu-close"></div>
+        <ul class="nav">
+          <li><a href="/">HOME</a></li>
+          <li><a class="active" href="/about.html">ABOUT</a></li>
+          <li><a href="/listings.html">LISTINGS</a></li>
+          <li><a href="#">PROJECTS</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="container-about">
+      <div id="header-about">
+        <div class="container">
+          <div class="header-image">
+            <img class="image-left" src="images/about/hero.jpg" />
           </div>
-          <div>
-          <div id="header-about" class="container">
-            <div class="header-image">
-              <img class="image-left" src="images/about/hero.jpg" />
-            </div>
-            <div class="description">
-              <div class="title head-title">ABOUT <span>GROUND</span>SOURCE</div>
-              <div class="top head-subtitle">In dignissim orci quis lorem porta rhoncus.</div>
-              <div class="bottom head-subtitle">Morbi dictum finibus velit, vel fringilla volutpat.</div>
-              <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-                vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                <br><br>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-                vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              </p>
-            </div>
-          </div>
-          <div class="agents">
-            <div class="container">
-              <div class="agent">
-                <div class="bio-image">
-                  <img src="images/about/agent-01.jpg"/>
-                  <div class="image-title"><span>JONATHAN</span> DOE</div>
-                </div>
-                <div class="short-bio">
-                  Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                  Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </div>
-                <div class="bio-button">VIEW FULL BIO</div>
-                <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
-              </div>
-
-              <div class="agent">
-                <div class="bio-image">
-                  <img src="images/about/agent-02.jpg"/>
-                  <div class="image-title"><span>JANE</span> DOE</div>
-                </div>
-                <div class="short-bio">
-                  Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                  Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </div>
-                <div class="bio-button">VIEW FULL BIO</div>
-                <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
-              </div>
-
-              <div class="agent">
-                <div class="bio-image">
-                  <img src="images/about/agent-03.jpg"/>
-                  <div class="image-title"><span>JONATHAN</span> DOE</div>
-                </div>
-                <div class="short-bio">
-                  Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                  Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </div>
-                <div class="bio-button">VIEW FULL BIO</div>
-                <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="about-content">
-          <div class="section-header">
-            <div class="title">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR</div>
-            <div class="subtitle">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-            </div>
-          </div>
-          <div class="section-content container">
-            <div class="description">
-              Groundsource specializes in various areas throughout the greater Los Angeles areas including but not limited to:
-              <ul>
-                <li>Playa Vista</li>
-                <li>Marina Del Rey</li>
-                <li>Park West</li>
-                <li>Culver City</li>
-                <li>Venice</li>
-                <li>Santa Monica</li>
-                <li>Westwood</li>
-                <li>Beverly Hills</li>
-                <li>and many more</li>
-              </ul>
-            </div>
-            <div class="gmap-container">
-              <img class="gmap" src="images/about/gmap.jpg" />
-            </div>
+          <div class="description">
+            <div class="title head-title">ABOUT <span>GROUND</span>SOURCE</div>
+            <div class="top head-subtitle">In dignissim orci quis lorem porta rhoncus.</div>
+            <div class="bottom head-subtitle">Morbi dictum finibus velit, vel fringilla volutpat.</div>
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+              tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+              vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+              no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              <br><br>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+              tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+              vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+              no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </p>
           </div>
         </div>
       </div>
+      <div class="agents">
+        <div class="container">
+          <div class="agent">
+            <div class="bio-image">
+              <img src="images/about/agent-01.jpg"/>
+              <div class="image-title"><span>JONATHAN</span> DOE</div>
+            </div>
+            <div class="short-bio">
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </div>
+            <div class="bio-button">VIEW FULL BIO</div>
+            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+          </div>
+
+          <div class="agent">
+            <div class="bio-image">
+              <img src="images/about/agent-02.jpg"/>
+              <div class="image-title"><span>JANE</span> DOE</div>
+            </div>
+            <div class="short-bio">
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </div>
+            <div class="bio-button">VIEW FULL BIO</div>
+            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+          </div>
+
+          <div class="agent">
+            <div class="bio-image">
+              <img src="images/about/agent-03.jpg"/>
+              <div class="image-title"><span>JONATHAN</span> DOE</div>
+            </div>
+            <div class="short-bio">
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </div>
+            <div class="bio-button">VIEW FULL BIO</div>
+            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+          </div>
+        </div>
+      </div>
+      <div id="about-content">
+        <div class="section-header">
+          <div class="title">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR</div>
+          <div class="subtitle">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+          </div>
+        </div>
+        <div class="section-content container">
+          <div class="description">
+            Groundsource specializes in various areas throughout the greater Los Angeles areas including but not limited to:
+            <ul>
+              <li>Playa Vista</li>
+              <li>Marina Del Rey</li>
+              <li>Park West</li>
+              <li>Culver City</li>
+              <li>Venice</li>
+              <li>Santa Monica</li>
+              <li>Westwood</li>
+              <li>Beverly Hills</li>
+              <li>and many more</li>
+            </ul>
+          </div>
+          <div class="gmap-container">
+            <img class="gmap" src="images/about/gmap.jpg" />
+          </div>
+        </div>
+      </div>
+      <div id="footer">
+        <div class="column">
+          <div class="title">SEARCH</div>
+          <a href="#">Properties For Sale</a>
+          <a href="#">Properties For Lease</a>
+          <a href="#">Find a Broker</a>
+        </div>
+        <div class="column">
+          <div class="title">PRODUCTS &amp; SERVICES</div>
+          <a href="#">Product Overview</a>
+          <a href="#">Premium Lister</a>
+          <a href="#">Premium Searcher</a>
+        </div>
+        <div class="column">
+          <div class="title">RESOURCES</div>
+          <a href="#">Help</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Add Listing</a>
+          <a href="#">Market Trends</a>
+        </div>
+        <div class="column">
+          <div class="title">COMPANY</div>
+          <a href="#">About Us</a>
+          <a href="#">LoopNet Blog</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <div class="column social">
+          <a href="#" target="_blank">
+            <img src="images/social/i.svg"/>
+          </a>
+          <a href="#" target="_blank">
+            <img src="images/social/t.svg"/>
+          </a>
+          <a href="#" target="_blank">
+            <img src="images/social/f.svg"/>
+          </a>
+        </div>
+      </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $('.ham-menu, .menu-close').click(function(){
-          $('.nav-modal').fadeToggle();
-        });
-    });
-    </script>
-    <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp inject` to automatically populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
-
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
-
   </body>
 </html>
