--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,31 @@
           </div>
         </div>
       </div>
+      <div class="our-services">
+          <div class="flexbox-full">
+            <div class="services-img">
+              <img src="images/services.jpg">
+            </div>
+            <div class="services-info">
+              <div class="header"><p><strong>OUR</strong> SERVICES</p></div>
+              <div class="tennant-rep">
+                <div class="padded-text">
+                  <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
+                  <br />
+                  Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+                </div>
+              </div>
+              <div class="landlord-rep">
+                <div class="padded-text">
+                  <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
+                  <br />
+                  We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
