--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,45 @@
           </div>
         </div>
       </div>
+            <div id="footer">
+        <div class="column">
+          <div class="title">SEARCH</div>
+          <a href="#">Properties For Sale</a>
+          <a href="#">Properties For Lease</a>
+          <a href="#">Find a Broker</a>
+        </div>
+        <div class="column">
+          <div class="title">PRODUCTS &amp; SERVICES</div>
+          <a href="#">Product Overview</a>
+          <a href="#">Premium Lister</a>
+          <a href="#">Premium Searcher</a>
+        </div>
+        <div class="column">
+          <div class="title">RESOURCES</div>
+          <a href="#">Help</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Add Listing</a>
+          <a href="#">Market Trends</a>
+        </div>
+        <div class="column">
+          <div class="title">COMPANY</div>
+          <a href="#">About Us</a>
+          <a href="#">LoopNet Blog</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <div class="column social">
+          <a href="#" target="_blank">
+            <img src="images/social/i.svg"/>
+          </a>
+          <a href="#" target="_blank">
+            <img src="images/social/t.svg"/>
+          </a>
+          <a href="#" target="_blank">
+            <img src="images/social/f.svg"/>
+          </a>
+        </div>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
