--- a/src/listings.html
+++ b/src/listings.html
@@ -69,146 +69,156 @@
         </div>
         <div class="flexbox listings">
           <div class="listing-preview">
-            <div class="header">
-              <a href="listing.html">
+            <a href="listing.html">
+              <div class="header">
                 <div class="label">RENT</div>
                 <div class="address">
                   <div>2467 JEFFERSON AVE,</div>
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
-              </a>
-            </div>
-            <div class="content">
-              <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-              </p>
-              <div class="amenities">
-                <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
               </div>
-            </div>
-            <div class="footer">
-              <strong>$4,500</strong> per month
-            </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
+            </a>
           </div>
           <div class="listing-preview">
-            <div class="header">
-              <div class="label">RENT</div>
-              <div class="address">
-                <div>2467 JEFFERSON AVE,</div>
-                <div><strong>PLAYA</strong> VISTA</div>
+            <a href="listing.html">
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
               </div>
-            </div>
-            <div class="content">
-              <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-              </p>
-              <div class="amenities">
-                <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
               </div>
-            </div>
-            <div class="footer">
-              <strong>$4,500</strong> per month
-            </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
+            </a>
           </div>
           <div class="listing-preview">
-            <div class="header">
-              <div class="label">RENT</div>
-              <div class="address">
-                <div>2467 JEFFERSON AVE,</div>
-                <div><strong>PLAYA</strong> VISTA</div>
+            <a href="listing.html">
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
               </div>
             </div>
-            <div class="content">
-              <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-              </p>
-              <div class="amenities">
-                <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-              </div>
-            </div>
-            <div class="footer">
-              <strong>$4,500</strong> per month
-            </div>
-          </div>
+          </a>
         </div>
-        <div class="flexbox">
+        <div class="flexbox listings">
           <div class="listing-preview">
-            <div class="header">
-              <div class="label lease">LEASE</div>
-              <div class="address">
-                <div>2467 JEFFERSON AVE,</div>
-                <div><strong>PLAYA</strong> VISTA</div>
+            <a href="listing.html">
+              <div class="header">
+                <div class="label lease">LEASE</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
               </div>
-            </div>
-            <div class="content">
-              <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-              </p>
-              <div class="amenities">
-                <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
               </div>
-            </div>
-            <div class="footer">
-              <strong>$4,500</strong> per month
-            </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
+            </a>
           </div>
           <div class="listing-preview">
-            <div class="header">
-              <div class="label lease">LEASE</div>
-              <div class="address">
-                <div>2467 JEFFERSON AVE,</div>
-                <div><strong>PLAYA</strong> VISTA</div>
+            <a href="listing.html">
+              <div class="header">
+                <div class="label lease">LEASE</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
               </div>
-            </div>
-            <div class="content">
-              <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-              </p>
-              <div class="amenities">
-                <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
               </div>
-            </div>
-            <div class="footer">
-              <strong>$4,500</strong> per month
-            </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
+            </a>
           </div>
           <div class="listing-preview">
-            <div class="header">
-              <div class="label lease">LEASE</div>
-              <div class="address">
-                <div>2467 JEFFERSON AVE,</div>
-                <div><strong>PLAYA</strong> VISTA</div>
+            <a href="listing.html">
+              <div class="header">
+                <div class="label lease">LEASE</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
               </div>
-            </div>
-            <div class="content">
-              <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-              </p>
-              <div class="amenities">
-                <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
               </div>
-            </div>
-            <div class="footer">
-              <strong>$4,500</strong> per month
-            </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
+            </a>
           </div>
         </div>
         <div class="paginator">
