--- a/src/listing.html
+++ b/src/listing.html
@@ -50,7 +50,6 @@
       </div>
     </div>
 
-    <!-- TODO: add 1800px wide container to content -->
     <div id="container-listing" class="container-fluid">
       <img src="images/logo.png" class="logo-upper-left"/>
       <div id="header-listings" class="background-header"></div>
@@ -125,8 +124,7 @@
             </div>
             <div class="info-box">
               <h2 class="title subdued">LOCATION</h2>
-              <img src="images/fake-map.jpg" class="img-responsive" />
-              <!-- TODO: Real Google map -->
+              <div id="about-google-map"></div>
               <h2 class="title subdoed">FLOORPLAN</h2>
               <img src="images/fake-plans.jpg" class="img-responsive" />
             </div>
@@ -171,9 +169,28 @@
       </div>
     </div>
 
+    <h3>My Google Maps Demo</h3>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: 33.979449, lng: -118.413002};
+        var map = new google.maps.Map(document.getElementById('about-google-map'), {
+          zoom: 12,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <!-- TODO replace API key -->
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhoAiw62lFQnHpIqeqYJVu1KfRkcitEN0&callback=initMap">
+    </script>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
