--- a/src/listings.html
+++ b/src/listings.html
@@ -67,34 +67,34 @@
           <div class="submenu">
             <!-- <div class="plus-sign">+</div>LOOKING FOR CERTAIN FEATURES -->
           </div>
-          <div class="listings flexbox listing-filters">
-            <select name="location">
-              <option value="playa-vista">PLAYA VISTA</option>
-              <option value="playa-vista">MARINA DEL REY</option>
-              <option value="playa-vista">SANTA MONICA</option>
-              <option value="playa-vista">PLAYA VISTA</option>
-              <option value="playa-vista">MARINA DEL REY</option>
-              <option value="playa-vista">PLAYA VISTA</option>
-            </select>
-            <select name="status">
-              <option value="foobar">Foobar</option>
-              <option value="goobar">Goobar</option>
-            </select>
-            <select name="type">
-              <option value="rent">Rent</option>
-              <option value="lease">Lease</option>
-            </select>
-            <select name="min-rooms">
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-            <input type="text" placeholder=" Min. Size">
-            <input type="text" placeholder=" Keyword(e.g 'office')">
-            <input type="text" placeholder=" Price">
-            <button type"submit">SEARCH</button>
-          </div>
+        </div>
+        <div class="flexbox listings filters">
+          <select name="location">
+            <option value="playa-vista">PLAYA VISTA</option>
+            <option value="playa-vista">MARINA DEL REY</option>
+            <option value="playa-vista">SANTA MONICA</option>
+            <option value="playa-vista">PLAYA VISTA</option>
+            <option value="playa-vista">MARINA DEL REY</option>
+            <option value="playa-vista">PLAYA VISTA</option>
+          </select>
+          <select name="status">
+            <option value="foobar">Foobar</option>
+            <option value="goobar">Goobar</option>
+          </select>
+          <select name="type">
+            <option value="rent">Rent</option>
+            <option value="lease">Lease</option>
+          </select>
+          <select name="min-rooms">
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
+          <input type="text" placeholder=" Min. Size">
+          <input type="text" placeholder=" Keyword(e.g 'office')">
+          <input type="text" placeholder=" Price">
+          <button type"submit">SEARCH</button>
         </div>
         <div class="flexbox listings">
           <div class="listing-preview">
